Mon Jan 12 12:51:45 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/site.xsl: Changed logo spacing to avoid stacking
	* doc/*: rebuilt web pages

Sun Jan 11 20:10:09 MST 2004 John Fleck <jfleck@inkstain.net>

	* doc/site.xsl
	* doc/w3c.png
	* doc/*
	Test William's new site.xsl improvements by adding the
	W3C logo icon, rebuild docs, and presto! It shows up
	everywhere!

Mon Jan 10 08:33:18 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: Refined wrapper code with large
	  test case submitted by Norm Walsh. (Bug 130922)

Sun Jan 10 23:33:21 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: Added coding to create a xsltDocument
	  wrapper for an RVT, in order to produce the applicable
	  keys (Bug 130922)

Sat Jan  9 17:04:38 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/search.xml, doc/search.templ, doc/Makefile.am,
	  doc/search.php.inc: Added new facility to "autogen"
	  the search script.  Fixed a few more problems with
	  the API page generation.
	* doc/site.xsl, doc/api.xsl, doc/newapi.xsl: integrated
	  the autogeneration of the php script.  Note that from
	  this point doc/search.php will be include in the
	  generic "Rebuilt docs".
	* doc/*: api docs rebuilt.
	
Fri Jan  8 08:32:55 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/site.xsl, doc/api.xsl, doc/newapi.xsl, doc/search.php:
	  Further cleanup, fully implemented common routine for
	  "generic page" within the docs.
	* doc/*: api docs rebuilt with enhanced scripts.

Thu Jan  8 06:45:04 MST 2004 John Fleck <jfleck@inkstain.net>

	* doc/xslt.html, doc/bugs.html
	made link to bugzilla more useful

Wed Jan  7 20:12:14 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/api.xsl, doc/site.xsl, doc/search.php: a little
	  cleanup of scripts, assuring page tables are consistent.
	* doc/*: api docs rebuilt with enhanced scripts.

Tue Jan  6 23:38:47 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* configure.in: fixed Bug130593.