@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<initial>Mode of FOO is input</initial><post-transform>Mode of FOO is fiddled</post-transform>
